<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/item_file_background"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp" >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/file_options"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:ellipsize="middle"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:text="@string/file_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/file_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/white"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp" >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/file_star"
                    android:layout_width="wrap_content"
                    android:layout_height="24sp"
                    android:adjustViewBounds="true"
                    android:backgroundTint="#00000000"
                    android:contentDescription="@string/file_star"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_starred_empty"
                    tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/file_share"
                    android:layout_width="wrap_content"
                    android:layout_height="24sp"
                    android:layout_marginStart="10dp"
                    android:adjustViewBounds="true"
                    android:backgroundTint="#00000000"
                    android:contentDescription="@string/file_share"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_shared"
                    app:tint="@android:color/holo_green_dark"
                    tools:ignore="TouchTargetSizeCheck" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/file_trash"
                    android:layout_width="wrap_content"
                    android:layout_height="24sp"
                    android:layout_marginStart="10dp"
                    android:adjustViewBounds="true"
                    android:backgroundTint="#00000000"
                    android:contentDescription="@string/file_delete"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:scaleY="1.1"
                    android:src="@drawable/icon_delete"
                    app:tint="#FF0000"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_gravity="center"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="12dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/file_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/file_preview" />

    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>